🎨 Improvements to formatting of code