@@ -3,8 +3,7 @@ package io.github.lengors.scoutdesk.domain.text.exceptions.models;
 /**
  * Exception thrown when an invalid character is found in a string.
  * <p>
- * This exception is used to indicate that a string contains a character that is
- * not allowed or recognized.
+ * This exception is used to indicate that a string contains a character that is not allowed or recognized.
  *
  * @author lengors
  */
@@ -16,6 +15,6 @@ public class InvalidCharacterException extends Exception {
    * @param character The invalid character that was found.
    */
   public InvalidCharacterException(final char character) {
-    super(String.format("Invalid character found: '%s'", character));
+    super("Invalid character found: '%s'".formatted(character));
   }
 }
